syntax = "proto3";

option go_package = "github.com/mayerkv/go-recruitments/recruitment-service;recruitment_service";

service RecruitmentService {
  rpc PostVacancy(PostVacancyRequest) returns (PostVacancyResponse) {}
}

message PostVacancyRequest {
  string message = 1;
}
message PostVacancyResponse {
  string message = 1;
}
